--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>0.1.7</version>
+		</dependency>
 	</dependencies>
 </project>
